<resources>
    <string name="app_name">YourHealth</string>

    <!--MESSAGES-->
    <string name="emergency_notification_message">EMERGENCY!!! Heartbeat abnormal</string>
    <string name="message_welcome">Your health</string>
    <string name="message_role_choice">Are you a patient or a patient\'s family member?</string>
    <string name="message_watcher_hint">Please type here the patient\'s code in order to subscribe to emergency alert</string>
    <string name="message_watcher_already_subscribe">You have already been subscribing for notification alert</string>
    <string name="message_invalid_channel">Patient\'s code is invalid. Please check again with the patient</string>
    <string name="message_unsubscribe_patient">Please select patient you want to unsubscribe from</string>
    <string name="message_network_connectivity_lost">Your device has been disconnected from network connectivity.
        Please reconnect your device to network and confirm by pressing OK</string>
    <string name="message_notification_network_connectivity_lost">Your device has been disconnected from network connectivity.
        Please reconnect or else, emergency push notification will not work</string>
    <string name="message_notification_ring_disconnected">Seems like you have taken off your ring.
        Please reconnect after you have put it on via the application</string>
    <string name="message_welcome_ringwearer">Hello, your \"ring\" looks nice… ^_^</string>
    <string name="message_ask_for_name">May I have your name?</string>
    <string name="message_server_error">There was a server error. Please try again later</string>
    <string name="message_heartrate_title">Heart rate:</string>
    <string name="message_bpm_unit">BPM</string>
    <string name="message_confirm_running">Are you running like hell?</string>
    <string name="message_confirm_exercising">Are you doing gym like a bad ass :P</string>
    <string name="message_Bpm">Bpm</string>
    <string name="message_Spm">Spm</string>

    <!--NOTIFICATION_TITLES-->
    <string name="notification_title_information">Information</string>

    <!--BUTTONS-->
    <string name="btn_patient">Patient</string>
    <string name="btn_familyMember">Family member</string>
    <string name="btn_startSubscribing">Subscribe for emergency alert</string>
    <string name="btn_unsubscribe">Unsubscribe</string>
    <string name="btn_stopAlert">Stop</string>
    <string name="btn_tryAgain">Try again</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_yes">Yes I am</string>

    <!--MENU ITEM TITLE-->
    <string name="menuItem_rechooseRole">Rechoose role</string>
    <string name="number_ten">10</string>
    <string name="number_zero">0</string>

    <!--PLACEHOLDERS-->
    <string name="placeHolder_patientCode">Patient\'s code</string>
    <string name="placeHolder_patientName">Your fullname here</string>

    <!--Field validation error-->
    <string name="error_patientCodeEmtpy">Patient\'s code is empty</string>
    <string name="error_patientNameEmpty">Name is empty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
