<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="fi.letsdev.yourhealth.fragments.WatcherSetupFragment">

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txt_messageWatcherHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:textAlignment="center"
            android:text="@string/message_watcher_hint"/>

        <EditText
            android:id="@+id/editText_patientCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_messageWatcherHint"
            android:layout_marginTop="10dp"
            android:hint="@string/placeHolder_patientCode"/>

        <Button
            android:id="@+id/btn_startSubscribing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_patientCode"
            android:layout_marginTop="10dp"
            android:text="@string/btn_startSubscribing"/>

        <Button
            android:id="@+id/btn_unsubscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_startSubscribing"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_unsubscribe"/>

        <Button
            android:id="@+id/btn_stopAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_unsubscribe"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/btn_stopAlert"/>
    </RelativeLayout>

</FrameLayout>
