<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="fi.letsdev.yourhealth.fragments.RingWearerSetupFragment">

    <fi.letsdev.yourhealth.View.PlayGifView
        android:id="@+id/viewGif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/btn_stopAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_stopAlert"/>

    <RelativeLayout
        android:id="@+id/relativeLayout_heartrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/viewGif"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:textSize="23sp"
            android:textStyle="bold"
            android:text="@string/message_heartrate_title"/>

        <TextView
            android:id="@+id/txt_bpm"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:textAlignment="center"
            android:text="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txt_bpm"
            android:layout_alignBottom="@+id/txt_bpm"
            android:layout_toEndOf="@+id/txt_bpm"
            android:layout_marginStart="7dp"
            android:textSize="19sp"
            android:text="@string/message_bpm_unit"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_stopAlert"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/txt_bpm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/message_Bpm"/>

        <EditText
            android:id="@+id/editText_emulate_bpm"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/txt_bpm_title"
            android:layout_alignBaseline="@id/txt_bpm_title"
            android:layout_marginStart="20dp"
            android:textAlignment="center"
            android:hint="@string/number_zero"/>

        <TextView
            android:id="@+id/txt_spm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_bpm_title"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:hint="@string/message_Spm"/>

        <EditText
            android:id="@+id/editText_emulate_spm"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/txt_spm_title"
            android:layout_below="@id/editText_emulate_bpm"
            android:layout_marginStart="20dp"
            android:textAlignment="center"
            android:hint="@string/number_zero"/>

    </RelativeLayout>

</RelativeLayout>
